--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "focus-trap-react": "^11.0.6",
+    "hamburger-react": "^2.5.2",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
