--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "focus-trap-react": "^11.0.6",
     "hamburger-react": "^2.5.2",
     "next": "16.1.3",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
